# congestion

./: .gitignore  devenv.nix  pyproject.toml  test_branch.ipynb
data/: 00.Suivi D1  - Suivi_D1.csv  2021-10-25 Chroniques de contraintes - Zone de Perquie 2025.xlsx  2021-10-25 Chroniques de contraintes - Zone de Perquie 2030.xlsx  2410_CapacitesDAccueil.csv  2412_CapacitesDAccueil.csv  2412_postes-electriques-rte.csv  2501_CapacitesDAccueil.csv  BESS_behavior_arbitrage.csv  BESS_behavior_arbitrage_SSY.csv  ProductionGroupe_2023-semestre1.csv  ProductionGroupe_2023-semestre2.csv  RT_ligne_2019.csv  capareseau_ram.csv  contraintes-region.csv  contraintes_ARA.csv  corrected_2410_CapacitesDAccueil.csv  corrected_2412_CapacitesDAccueil.csv  corrected_2501_CapacitesDAccueil.csv  enceintes-de-poste-rte.csv  energies-et-puissances-regionales-liees-au-contraintes.csv  marges injection 2025 - PV.xlsx  marges injection 2030 - PV.xlsx  soutirages-quotidiens-consolides-rpt-par-section.csv
notebooks/: AO_flex_ex_Perquie.ipynb  CAPARESEAU_data.ipynb  RT_225_400_kV_data.ipynb  compared_D1_ratio.txt  conso_metropole.ipynb  donnee_reseau.ipynb  draft_congestion.ipynb  flow_modelisation.ipynb  script_closest_neighboors.py
src/: request_major_prod_entsoe.py  request_major_prod_entsoe_abort.py  utils.py
