[tool.poetry]
name = "congestion"
version = "0.1.0"
description = ""
authors = ["MattEclipse <mmolenat@eclipse-flow.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.2"
seaborn = "^0.13.2"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
