[tool.poetry]
name = "congestion"
version = "0.1.0"
description = ""
authors = ["MattEclipse <mmolenat@eclipse-flow.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.2"
seaborn = "^0.13.2"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
xlrd = "^2.0.1"
plotly = "^5.24.1"
folium = "^0.18.0"
nbformat = "^5.10.4"
scikit-learn = "^1.5.2"
geopy = "^2.4.1"
pyproj = "^3.7.0"
utm = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
